# ProaledClient

./: .gitignore  .typos.toml  CMakeLists.txt  LICENSE  README.md  flake.nix  license.txt
.github/workflows/: build-proaledclient.yml  build.yml  clang-tidy.yml  fast-build.yml  release.yml  style.yml
cmake/: BuildVulkanShaders.cmake  CreatePackageArchive.cmake  FindCrypto.cmake  RobocopyDirectory.cmake
data/BestClient/combo/: combo1.wv  combo2.wv  combo3.wv  combo4.wv  combo5.wv  combo6.wv  combo7.wv
data/BestClient/graffity/: spray-apply.wv  spray-open.wv  spray-select.wv  spray-sound-from-gta.wv
data/BestClient/languages/: german.txt  russian.txt  serbian_cyrillic.txt  simplified_chinese.txt  spanish.txt  ukrainian.txt
data/languages/: russian.txt  simplified_chinese.txt
data/shader/: blur.frag  blur.vert  blur_kawase.frag  blur_kawase.vert  glow.frag  glow.vert
datasrc/: content.py
docs/: BESTCLIENT_AUTHORED_FUNCTIONS.md
scripts/: fix_style.py  integration_test.py
src/base/: net.cpp
src/clientindicatorsrv/: .env.example  Cargo.toml  README.md  bestclient-indicator-server.service  run.sh
src/clientindicatorsrv/src/: main.rs
src/engine/: client.h  discord.h  editor.h  font_icons.h  graphics.h  serverbrowser.h  sound.h  steam.h  updater.h
src/game/: gamecore.cpp  localization.cpp  localization.h  version.h
src/graffitysrv/: .gitignore  README.md  go.mod  main.go  run.sh
src/steam/: steam_api_flat.h  steam_api_stub.cpp
src/test/: clientindicator_test.cpp  music_visualizer_test.cpp
src/tools/: bestclient_updater.cpp
(+222 files in other folders)
